--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,6 @@
 {
     "version" : 2,
-    "name" : "FUll Stack",
+    "name" : "Full Stack",
     "builds" : [
         {
             "src" : "./index.js",
